--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs",
+  "name": "mekaai",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,8 +12,12 @@
   "dependencies": {
     "@types/node": "^22.13.11",
     "@whiskeysockets/baileys": "^6.7.18",
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "megajs": "^1.3.7",
+    "glob": "^11.0.3",
+    "mongodb": "^6.17.0",
     "pino": "^9.7.0"
   }
 }
