--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SESSION_ID=mekaai_43cdf18f
 
 # Optional
 OWNER_JID=
-MEKAMODE=mekaai
+MEKAMODE=meka
 MEKAAUTOREACT=none
 MEKAAUTOVIEWSTATUS=offview
 MEKAAUTOREAD=none
